enable fortify scan